--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "global.css": "^1.1.0",
     "jquery": "^3.5.1",
     "reset.css": "^2.0.2"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
